--- a/MyBert_paragraph_TPU.ipynb
+++ b/MyBert_paragraph_TPU.ipynb
@@ -1100,13 +1100,11 @@
       "metadata": {
         "id": "khuNEnMw2wiv",
         "colab_type": "code",
-        "outputId": "e3c296c4-dedc-423c-e855-ad91a2ddcb16",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 748
-        }
+        "colab": {}
       },
       "source": [
+        "## 4030 : 43\n",
+        "ckpt = 4545\n",
         "import numpy as np\n",
         "from sklearn import metrics\n",
         "predictions = model_predict(estimator_from_tfhub,dev_InputExamples_par[:-2],dev_features[:-2],checkpoint_path = 'gs://bert_example/bert-tfhub/models/smallBERT-15It_allParagraphs/model.ckpt-%d'%ckpt)\n",
@@ -1117,34 +1115,34 @@
         "  labels_val.append(labels[np.argmax(item[1])])\n",
         "true_label = list(dev_par['sentiment'])[:-2]\n",
         "\n",
-        "print('---------------Paragraph-level Dev results-------------')\n",
-        "print(metrics.confusion_matrix(y_pred=labels_val,y_true=true_label))\n",
-        "print(metrics.classification_report(y_pred=labels_val,y_true = true_label))\n",
+        "# print('---------------Paragraph-level Dev results-------------')\n",
+        "# print(metrics.confusion_matrix(y_pred=labels_val,y_true=true_label))\n",
+        "# print(metrics.classification_report(y_pred=labels_val,y_true = true_label))\n",
         "\n",
-        "predictions = model_predict(estimator_from_tfhub,test_InputExamples_par,test_features,checkpoint_path = 'gs://bert_example/bert-tfhub/models/smallBERT-15It_allParagraphs/model.ckpt-%d'%ckpt)\n",
+        "# predictions = model_predict(estimator_from_tfhub,test_InputExamples_par,test_features,checkpoint_path = 'gs://bert_example/bert-tfhub/models/smallBERT-15It_allParagraphs/model.ckpt-%d'%ckpt)\n",
         "\n",
-        "labels = [\"Negative\",\"Neutral\", \"Positive\"]\n",
-        "labels_val = []\n",
-        "for item in predictions:\n",
-        "  labels_val.append(labels[np.argmax(item[1])])\n",
-        "true_label = list(test_par['sentiment'])\n",
-        "print('---------------Paragraph-level Random Test results-------------')\n",
-        "print(metrics.confusion_matrix(y_pred=labels_val,y_true=true_label))\n",
-        "print(metrics.classification_report(y_pred=labels_val,y_true = true_label))\n",
+        "# labels = [\"Negative\",\"Neutral\", \"Positive\"]\n",
+        "# labels_val = []\n",
+        "# for item in predictions:\n",
+        "#   labels_val.append(labels[np.argmax(item[1])])\n",
+        "# true_label = list(test_par['sentiment'])\n",
+        "# print('---------------Paragraph-level Random Test results-------------')\n",
+        "# print(metrics.confusion_matrix(y_pred=labels_val,y_true=true_label))\n",
+        "# print(metrics.classification_report(y_pred=labels_val,y_true = true_label))\n",
         "\n",
         "\n",
-        "predictions = model_predict(estimator_from_tfhub,test_InputExamples_fixed_par[:-1],test_features_fixed[:-1],checkpoint_path = 'gs://bert_example/bert-tfhub/models/smallBERT-15It_allParagraphs/model.ckpt-%d'%ckpt)\n",
+        "# predictions = model_predict(estimator_from_tfhub,test_InputExamples_fixed_par[:-1],test_features_fixed[:-1],checkpoint_path = 'gs://bert_example/bert-tfhub/models/smallBERT-15It_allParagraphs/model.ckpt-%d'%ckpt)\n",
         "\n",
-        "labels = [\"Negative\",\"Neutral\", \"Positive\"]\n",
-        "labels_val = []\n",
-        "for item in predictions:\n",
-        "  labels_val.append(labels[np.argmax(item[1])])\n",
-        "true_label = list(test_fixed_par['sentiment'])[:-1]\n",
-        "print('---------------Paragraph-level Fixed Test results-------------')\n",
-        "print(metrics.confusion_matrix(y_pred=labels_val,y_true=true_label))\n",
-        "print(metrics.classification_report(y_pred=labels_val,y_true = true_label))\n",
+        "# labels = [\"Negative\",\"Neutral\", \"Positive\"]\n",
+        "# labels_val = []\n",
+        "# for item in predictions:\n",
+        "#   labels_val.append(labels[np.argmax(item[1])])\n",
+        "# true_label = list(test_fixed_par['sentiment'])[:-1]\n",
+        "# print('---------------Paragraph-level Fixed Test results-------------')\n",
+        "# print(metrics.confusion_matrix(y_pred=labels_val,y_true=true_label))\n",
+        "# print(metrics.classification_report(y_pred=labels_val,y_true = true_label))\n",
         "\n",
-        "print('---------------Document-level results-------------')\n",
+        "# print('---------------Document-level results-------------')\n",
         "# doc_labels = []\n",
         "# pred_labels = []\n",
         "# for doc_id in dev_par['doc_id'].unique():\n",
@@ -1165,170 +1163,8 @@
         "# print(len(pred_labels))\n",
         "\n"
       ],
-      "execution_count": 47,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "---------------Paragraph-level Dev results-------------\n",
-            "[[ 33  69  51]\n",
-            " [ 58 360 354]\n",
-            " [ 41 348 610]]\n",
-            "              precision    recall  f1-score   support\n",
-            "\n",
-            "    Negative       0.25      0.22      0.23       153\n",
-            "     Neutral       0.46      0.47      0.46       772\n",
-            "    Positive       0.60      0.61      0.61       999\n",
-            "\n",
-            "   micro avg       0.52      0.52      0.52      1924\n",
-            "   macro avg       0.44      0.43      0.43      1924\n",
-            "weighted avg       0.52      0.52      0.52      1924\n",
-            "\n",
-            "---------------Paragraph-level Random Test results-------------\n",
-            "[[ 33  81  65]\n",
-            " [ 65 325 320]\n",
-            " [ 50 365 572]]\n",
-            "              precision    recall  f1-score   support\n",
-            "\n",
-            "    Negative       0.22      0.18      0.20       179\n",
-            "     Neutral       0.42      0.46      0.44       710\n",
-            "    Positive       0.60      0.58      0.59       987\n",
-            "\n",
-            "   micro avg       0.50      0.50      0.50      1876\n",
-            "   macro avg       0.41      0.41      0.41      1876\n",
-            "weighted avg       0.50      0.50      0.49      1876\n",
-            "\n",
-            "---------------Paragraph-level Fixed Test results-------------\n",
-            "[[ 39 100 125]\n",
-            " [ 67 311 400]\n",
-            " [ 64 317 501]]\n",
-            "              precision    recall  f1-score   support\n",
-            "\n",
-            "    Negative       0.23      0.15      0.18       264\n",
-            "     Neutral       0.43      0.40      0.41       778\n",
-            "    Positive       0.49      0.57      0.53       882\n",
-            "\n",
-            "   micro avg       0.44      0.44      0.44      1924\n",
-            "   macro avg       0.38      0.37      0.37      1924\n",
-            "weighted avg       0.43      0.44      0.43      1924\n",
-            "\n",
-            "---------------Document-level results-------------\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Txu5R3dU7VsK",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "_predictions = model_predict(estimator_from_tfhub,test_InputExamples_fixed_par[:1724],checkpoint_path = 'gs://bert_example/bert-tfhub/models/smallBERT-15It_allParagraphs/model.ckpt-4030')\n",
-        "labels_val = []\n",
-        "for item in predictions:\n",
-        "  labels_val.append(labels[np.argmax(item[1])])\n",
-        "true_label = list(test_fixed_par['sentiment'])[:1724]\n",
-        "\n",
-        "\n"
-      ],
       "execution_count": 0,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "kzzg7MRSk5E9",
-        "colab_type": "code",
-        "outputId": "66b47480-f5fc-4975-c27e-1b9afe9561ab",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 238
-        }
-      },
-      "source": [
-        "print(metrics.confusion_matrix(y_pred=labels_val,y_true=true_label))\n",
-        "print(metrics.classification_report(y_pred=labels_val,y_true = true_label))"
-      ],
-      "execution_count": 35,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[[ 31  89 117]\n",
-            " [ 57 270 353]\n",
-            " [ 56 290 461]]\n",
-            "              precision    recall  f1-score   support\n",
-            "\n",
-            "    Negative       0.22      0.13      0.16       237\n",
-            "     Neutral       0.42      0.40      0.41       680\n",
-            "    Positive       0.50      0.57      0.53       807\n",
-            "\n",
-            "   micro avg       0.44      0.44      0.44      1724\n",
-            "   macro avg       0.38      0.37      0.37      1724\n",
-            "weighted avg       0.43      0.44      0.43      1724\n",
-            "\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "TV5SpMUg7b9V",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "predictions = model_predict(estimator_from_tfhub,test_InputExamples_par[:1780],checkpoint_path = 'gs://bert_example/bert-tfhub/models/smallBERT-15It_allParagraphs/model.ckpt-4030')\n",
-        "labels_val = []\n",
-        "for item in predictions:\n",
-        "  labels_val.append(labels[np.argmax(item[1])])\n",
-        "true_label = list(test_par['sentiment'])[:1780]\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "KIwoEwmrk6ld",
-        "colab_type": "code",
-        "outputId": "d11d0b11-d9a0-434d-eb70-6ef07d8644bb",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 238
-        }
-      },
-      "source": [
-        "print(metrics.confusion_matrix(y_pred=labels_val,y_true=true_label))\n",
-        "print(metrics.classification_report(y_pred=labels_val,y_true = true_label))"
-      ],
-      "execution_count": 39,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[[ 25  77  57]\n",
-            " [ 62 307 306]\n",
-            " [ 46 352 548]]\n",
-            "              precision    recall  f1-score   support\n",
-            "\n",
-            "    Negative       0.19      0.16      0.17       159\n",
-            "     Neutral       0.42      0.45      0.44       675\n",
-            "    Positive       0.60      0.58      0.59       946\n",
-            "\n",
-            "   micro avg       0.49      0.49      0.49      1780\n",
-            "   macro avg       0.40      0.40      0.40      1780\n",
-            "weighted avg       0.49      0.49      0.49      1780\n",
-            "\n"
-          ],
-          "name": "stdout"
-        }
-      ]
     },
     {
       "cell_type": "code",
